@@ -59,6 +59,9 @@ PART
 
 		decoupleSpeed = 5
 
+		engineFailureRate = 0    // Probability the missile engine will fail to start (0-1), evaluated once on missile launch
+		guidanceFailureRate = 0  // Probability the missile guidance will fail (0-1), evaluated every frame after launch
+
 		audioClipPath = BDArmory/Sounds/rocketLoop
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
