@@ -71,6 +71,9 @@ PART
         //aeroSteerDamping = 4.5
         torqueRampUp = 50
 
+        engineFailureRate = 0    // Probability the missile engine will fail to start (0-1), evaluated once on missile launch
+		guidanceFailureRate = 0  // Probability the missile guidance will fail (0-1), evaluated every frame after launch
+
         homingType = aam
         missileType = missile
         targetingType = heat
